--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,16 @@
 {
   "presets": [
     [
-      "env",
+      "@babel/preset-env",
       {
         "targets": {
           "browsers": ["last 2 versions", "safari >= 7"]
         },
         "modules": false
       }
-    ],
-    "stage-3"
+    ]
   ],
   "plugins": [
-    "transform-class-properties"
+    "@babel/plugin-proposal-class-properties"
   ]
 }
