--- a/package.json
+++ b/package.json
@@ -27,11 +27,9 @@
     "pixi.js": "^4.7.1"
   },
   "devDependencies": {
-    "babel-core": "6.26.3",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-stage-3": "6.24.1",
-    "babelrc-rollup": "3.0.0",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
     "pixi.js": "4.8.6",
     "rollup": "1.4.1",
     "rollup-plugin-babel": "4.3.2",
